--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "contactnick",
-  "version": "0.1.0",
-  "private": true,
+  "name": "astrocontacttail",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "astro": "astro",
+    "build": "astro build",
+    "check": "astro check",
+    "watch": "astro check --wartch & astro dev --host",
+    "dev": "astro dev --host",
+    "preview": "astro preview",
+    "start": "astro dev"
   },
   "dependencies": {
-    "@formspree/react": "^2.5.1",
-    "@next/env": "^15.1.7",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
-  },
+    "@astrojs/check": "^0.9.4",
+    "@tailwindcss/vite": "^4.0.14",
+    "astro": "^5.5.2",
+    "astro-icon": "^1.1.5",
+    "tailwindcss": "^4.0.14"  },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@iconify-json/material-symbols": "^1.2.16",
+    "@iconify-json/tabler": "^1.2.17"
   }
 }
